--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<nz-layout class="app-layout">
+<nz-layout>
+  <nz-header>
+    <h1 nz-title>Astronomy Picture of the Day</h1>
+  </nz-header>
   <nz-content>
     <div class="inner-content">
       <router-outlet></router-outlet>
     </div>
   </nz-content>
-  <nz-footer>Ant Design ©2019 Implement By Angular</nz-footer>
+  <nz-footer>APOD ©2019 Creado por Otto Malavé</nz-footer>
 </nz-layout>
