--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -4,11 +4,13 @@
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
 
-.app-layout
-  height 100vh
+nz-header
+  background #0b3d92
+  text-align center
 
-nz-content
-  margin 24px
+  &>h1
+    color #fff
+    margin-top 10px
 
 .inner-content
   padding 24px
